--- a/package.json
+++ b/package.json
@@ -1,21 +1,49 @@
 {
   "name": "puro",
-  "version": "0.2.5",
+  "version": "0.2.8",
   "description": "Puro is a versatile and dynamic Discord bot designed to enhance your server experience. With a wide range of commands and seamless integration, Puro helps automate tasks and bring more fun and efficiency to your Discord community.",
   "main": "app.js",
   "scripts": {
-    "start": "concurrently \"nodemon app.js\" \"nodemon handler/register.js > /dev/null 2>&1 &\""
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "lint": "eslint .",
+    "test": "jest",
+    "update": "npm update"
   },
-  "keywords": ["discord", "bot", "automation", "community", "fun"],
+  "keywords": [
+    "discord",
+    "bot",
+    "automation",
+    "community",
+    "fun",
+    "discord.js",
+    "slash-commands"
+  ],
   "author": "Norbert Baricz",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/voice": "^0.18.0",
     "axios": "^1.6.8",
-    "discord.js": "^14.15.3",
+    "discord.js": "^14.17.3",
     "dotenv": "^16.4.5",
+    "ffmpeg-static": "^5.2.0",
+    "google-tts-api": "^2.0.2",
+    "js-yaml": "^4.1.0",
+    "libsodium-wrappers": "^0.7.15",
     "nodemon": "^3.1.0"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "eslint": "^8.57.0",
+    "jest": "^29.7.0"
+  },
+  "engines": {
+    "node": ">=16.9.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/norbertbaricz/Puro"
+  },
+  "bugs": {
+    "url": "https://github.com/norbertbaricz/Puro/issues"
   }
 }
