--- a/package.json
+++ b/package.json
@@ -22,19 +22,16 @@
   "author": "Norbert Baricz",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/voice": "^0.18.0",
+    "@discordjs/voice": "^0.16.1",
     "axios": "^1.6.8",
-    "discord.js": "^14.17.3",
+    "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
-    "ffmpeg-static": "^5.2.0",
-    "google-tts-api": "^2.0.2",
-    "js-yaml": "^4.1.0",
-    "libsodium-wrappers": "^0.7.15",
-    "nodemon": "^3.1.0"
+    "js-yaml": "^4.1.0"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.0"
   },
   "engines": {
     "node": ">=16.9.0"
