--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "axios": "^1.6.8",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "jsdom": "^26.0.0",
+    "node-fetch": "^2.7.0"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
