--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "puro",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "Puro is a versatile and dynamic Discord bot designed to enhance your server experience. With a wide range of commands and seamless integration, Puro helps automate tasks and bring more fun and efficiency to your Discord community.",
   "main": "app.js",
   "scripts": {
@@ -9,6 +9,20 @@
     "lint": "eslint .",
     "test": "jest",
     "update": "npm update"
+  },
+  "dependencies": {
+    "@discordjs/voice": "^0.18.0",
+    "@vitalets/google-translate-api": "^9.2.1",
+    "axios": "^1.9.0",
+    "discord.js": "^14.19.3",
+    "dotenv": "^16.5.0",
+    "gtts": "^0.2.1",
+    "js-yaml": "^4.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.10"
   },
   "keywords": [
     "discord",
@@ -21,26 +35,6 @@
   ],
   "author": "Norbert Baricz",
   "license": "ISC",
-  "dependencies": {
-    "@discordjs/voice": "^0.16.1",
-    "@huggingface/hub": "^2.1.0",
-    "@huggingface/inference": "^3.13.1",
-    "@huggingface/mcp-client": "^0.2.0",
-    "axios": "^1.9.0",
-    "discord.js": "^14.14.1",
-    "dotenv": "^16.4.5",
-    "ejs": "^3.1.10",
-    "js-yaml": "^4.1.0",
-    "jsdom": "^26.0.0",
-    "libsodium-wrappers": "^0.7.15",
-    "node-fetch": "^2.7.0",
-    "tweetnacl": "^1.0.3"
-  },
-  "devDependencies": {
-    "eslint": "^8.57.0",
-    "jest": "^29.7.0",
-    "nodemon": "^3.1.0"
-  },
   "engines": {
     "node": ">=16.9.0"
   },
